--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "eubrics",
   "main": "index.js",
+  "engines": {
+    "node": "14.18.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev:frontend": "npm run start --prefix frontend",
@@ -12,7 +15,7 @@
     "start": "run-p dev:backend  dev:frontend",
     "install:all": "npm install npm-run-all && run-p install:backend  install:frontend",
     "dbscript": "ts-node server/src/dbscript/populateEntries.ts",
-    "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
+    "heroku-postbuild": "cd frontend && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
   },
   "repository": "",
   "author": "mdsams <tabrejmdsams786@gmail.com>",
