--- a/package.json
+++ b/package.json
@@ -8,6 +8,14 @@
     "npm": "8.4.0"
   },
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev:frontend": "npm run start --prefix frontend",
+    "dev:backend": "npm run start --prefix backend",
+    "install:frontend": "npm install --prefix frontend",
+    "install:backend": "npm install --prefix backend",
+    "start": "run-all dev:backend  dev:frontend",
+    "install:all": "npm install npm-run-all && run-p install:backend  install:frontend",
+    "dbscript": "ts-node server/src/dbscript/populateEntries.ts",
     "heroku-postbuild": "cd frontend && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
   },
   "repository": "",
