--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "mongoose": "^6.4.2",
     "nodemon": "^2.0.18",
     "path": "^0.12.7",
-    "ts-node": "^10.8.2"
+    "ts-node": "^10.8.2",
+    "typescript": "^4.7.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
-    "@types/jsonwebtoken": "^8.5.8",
-    "typescript": "^4.7.4"
+    "@types/jsonwebtoken": "^8.5.8"
   }
 }
