--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "",
-    "start": "nodemon src/index.ts",
-    "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
+    "start": "nodemon src/index.ts"
   },
   "author": "sucheta mahata",
   "license": "ISC",
