--- a/package.json
+++ b/package.json
@@ -19,11 +19,10 @@
     "nodemon": "^2.0.18",
     "path": "^0.12.7",
     "ts-node": "^10.8.2",
-    "typescript": "^4.7.4"
-  },
-  "devDependencies": {
+    "typescript": "^4.7.4",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/jsonwebtoken": "^8.5.8"
-  }
+  },
+  "devDependencies": {}
 }
