--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "",
     "start": "nodemon src/index.ts"
   },
-  "author": "sucheta mahata",
+  "author": "Shams Tabrez",
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.13",
